--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "crypto": "^1.0.1",
-    "dotenv": "^16.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "nodemailer": "^6.7.5"
   }
 }
