added scripts in package.json

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "shoppy-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start:dev": "set NODE_ENV=development && nodemon server.js",
+    "start:prod": "set NODE_ENV=production && nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +21,8 @@
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.5",
     "nodemailer": "^6.7.5"
+  },
+  "engines": {
+    "node": "16.14.0"
   }
 }
