--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.5",
     "nodemailer": "^6.7.5",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "stripe": "^9.8.0"
   },
   "engines": {
     "node": ">=10.0.0"
